--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lucide-react": "^0.554.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "node-llama-cpp": "^3.14.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
